# crib

./: COPYRIGHT  Cargo.toml  LICENSE-MIT  NOTICE  README.md
crib/: Cargo.toml  README.md
crib/src/: bbi.rs  bigwig.rs  file.rs  lib.rs  object_store.rs
crib/src/bbi/: tests.rs
crib/src/bigwig/: tests.rs
cribtools/: Cargo.toml  README.md
cribtools/src/: main.rs
src/: bigwig.rs  file.rs  lib.rs  main.rs  view.rs
