[package]
name = "crib"
version = "0.1.1"
description = """Library and CLI for reading and writing genome track files."""
readme = "README.md"
authors = ["Garth Ilsley"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"
edition = "2024"
repository = "https://github.com/gannot/crib"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.94"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
gannot = "0.0.2"
bigtools = "0.5.4"
url = "2.5.4"
http = "1.2.0"
object_store = { version = "0.11.2", features = ["aws", "http"] }
aws-config = "1.5.15"
aws-sdk-s3 = "1.71.0"
aws-credential-types = "1.2.1"
async-trait = "0.1.85"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }