[workspace]
members = ["crib"]

[workspace.package]
version = "0.2.0"
authors = ["Garth Ilsley"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cribtools/crib"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
gannot = { version = "0.1.0" }
bigtools = "0.5.5"
tokio = "1.44.2"
tracing = "0.1.41"

[package]
name = "cribtools"
description = """CLI for reading genome track files."""
readme = "README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crib = { version = "0.2.0", path = "crib" }
gannot.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt-multi-thread"] }

clap = { version = "4.5.29", features = ["derive"] }
anyhow = "1.0.95"

tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "crib"
path = "src/main.rs"
