[package]
name = "crib"
version = "0.1.4"
description = """Library and CLI for reading and writing genome track files."""
readme = "README.md"
authors = ["Garth Ilsley"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"
edition = "2024"
repository = "https://github.com/cribtools/crib"

[dependencies]
tokio = { version = "1.43.0" }
tracing = "0.1.41"
thiserror = "2.0.11"
gannot = { version = "0.1.0", path = "../../gannot" }
bigtools = "0.5.5"
url = "2.5.4"
http = "1.2.0"
object_store = { version = "0.12.0", features = ["aws", "http"] }
aws-config = "1.5.16"
aws-sdk-s3 = "1.76.0"
aws-credential-types = "1.2.1"
async-trait = "0.1.86"
futures-util = "0.3.31"

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
