[package]
name = "crib"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

description = """Library for reading genome track files."""
readme = "README.md"

[dependencies]
gannot.workspace = true
bigtools.workspace = true
tokio.workspace = true
tracing.workspace = true

async-trait = "0.1.86"
futures-util = "0.3.31"

thiserror = "2.0.11"
url = "2.5.4"
http = "1.3.1"

object_store = { version = "0.12.0", features = ["aws", "http"] }
aws-config = "1.6.1"
aws-sdk-s3 = { version = "1.82.0", features = ["http-1x"] }
aws-credential-types = "1.2.2"

[dev-dependencies]
test-log = "0.2.17"